@@ -134,6 +134,14 @@ Emitted when a new database connection has been established.
 
 L<Mojo::SQLite> implements the following attributes.
 
+=head2 auto_migrate
+
+  my $bool = $sql->auto_migrate;
+  $sql     = $sql->auto_migrate($bool);
+
+Automatically migrate to the latest database schema with L</"migrations">, as
+soon as the first database connection has been established.
+
 =head2 dsn
 
   my $dsn = $sql->dsn;
